--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Loopstudios landing page</title>
-
+  <link rel="stylesheet" href="style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,21 +15,37 @@
   </style>
 </head>
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
+  <header>
 
-  Immersive experiences that deliver
+    <nav>
+      <a href=""><h4>loopstudios</h4></a>
+      <div class="nav">
+        <a href="#">About</a>
+        <a href="#">Careers</a>
+        <a href="#">Events</a>
+        <a href="#">Products</a>
+        <a href="#">Support</a>
+      </div>
+    </nav>
 
-  The leader in interactive VR
+    <div>
+      <h1>
+        Immersive experiences that deliver
+      </h1>
+    </div>
+  </header>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
+<section class="headline">
+  <div>
+    The leader in interactive VR
 
+    Founded in 2011, Loopstudios has been producing world-class virtual reality 
+    projects for some of the best companies around the globe. Our award-winning 
+    creations have transformed businesses through digital experiences that bind 
+    to their brand.
+  </div>
+</section>
+<section class="portfolio">
   Our creations
 
   See all
@@ -42,7 +58,10 @@
   Pocket borealis
   The curiosity
   Make it fisheye
+</section>
 
+ 
+<footer>
   About
   Careers
   Events
@@ -50,6 +69,10 @@
   Support
 
   © 2021 Loopstudios. All rights reserved.
+</footer>
+  
+
+  
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
