move images around

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -30,21 +31,25 @@
       </div>
     </nav>
 
-    <div>
+    <div class="hero">
       <h1>
-        Immersive experiences that deliver
+        IMMERSIVE EXPERIENCES THAT DELIVER
       </h1>
     </div>
   </header>
 
 <section class="headline">
-  <div>
-    The leader in interactive VR
+  <!-- <img src="./images/desktop/image-interactive.jpg" alt="peron with v r goggles"> -->
+  <div class="description">
+    <div class="description-text">
+      The leader in interactive VR
 
-    Founded in 2011, Loopstudios has been producing world-class virtual reality 
-    projects for some of the best companies around the globe. Our award-winning 
-    creations have transformed businesses through digital experiences that bind 
-    to their brand.
+      Founded in 2011, Loopstudios has been producing world-class virtual reality 
+      projects for some of the best companies around the globe. Our award-winning 
+      creations have transformed businesses through digital experiences that bind 
+      to their brand.
+    </div>
+    
   </div>
 </section>
 <section class="portfolio">
