--- a/index.html
+++ b/index.html
@@ -1,89 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Loopstudios landing page</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  <header>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-    <nav>
-      <a href=""><h4>loopstudios</h4></a>
-      <div class="nav">
-        <a href="#">About</a>
-        <a href="#">Careers</a>
-        <a href="#">Events</a>
-        <a href="#">Products</a>
-        <a href="#">Support</a>
+    <title>Frontend Mentor | Loopstudios landing page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href=""><h4>loopstudios</h4></a>
+        <div class="nav">
+          <a href="#">About</a>
+          <a href="#">Careers</a>
+          <a href="#">Events</a>
+          <a href="#">Products</a>
+          <a href="#">Support</a>
+        </div>
+      </nav>
+
+      <div class="hero">
+        <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
       </div>
-    </nav>
+    </header>
 
-    <div class="hero">
-      <h1>
-        IMMERSIVE EXPERIENCES THAT DELIVER
-      </h1>
+    <section class="headline">
+      <!-- <img src="./images/desktop/image-interactive.jpg" alt="peron with v r goggles"> -->
+      <div class="description">
+        <div class="description-text">
+          The leader in interactive VR Founded in 2011, Loopstudios has been
+          producing world-class virtual reality projects for some of the best
+          companies around the globe. Our award-winning creations have
+          transformed businesses through digital experiences that bind to their
+          brand.
+        </div>
+      </div>
+    </section>
+    <section class="portfolio">
+      Our creations See all Deep earth Night arcade Soccer team VR The grid From
+      up above VR Pocket borealis The curiosity Make it fisheye
+    </section>
+
+    <footer>
+      About Careers Events Products Support © 2021 Loopstudios. All rights
+      reserved.
+    </footer>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
     </div>
-  </header>
-
-<section class="headline">
-  <!-- <img src="./images/desktop/image-interactive.jpg" alt="peron with v r goggles"> -->
-  <div class="description">
-    <div class="description-text">
-      The leader in interactive VR
-
-      Founded in 2011, Loopstudios has been producing world-class virtual reality 
-      projects for some of the best companies around the globe. Our award-winning 
-      creations have transformed businesses through digital experiences that bind 
-      to their brand.
-    </div>
-    
-  </div>
-</section>
-<section class="portfolio">
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-</section>
-
- 
-<footer>
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-</footer>
-  
-
-  
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  </body>
 </html>
