style and position headline

--- a/index.html
+++ b/index.html
@@ -53,15 +53,18 @@
     </header>
 
     <section class="headline">
-      <!-- <img src="./images/desktop/image-interactive.jpg" alt="peron with v r goggles"> -->
+      <img
+        src="./images/desktop/image-interactive.jpg"
+        alt="peron with v r goggles"
+      />
       <div class="description">
-        <div class="description-text">
-          The leader in interactive VR Founded in 2011, Loopstudios has been
-          producing world-class virtual reality projects for some of the best
-          companies around the globe. Our award-winning creations have
-          transformed businesses through digital experiences that bind to their
-          brand.
-        </div>
+        <h2>THE LEADER IN INTERACTIVE VR</h2>
+        <p>
+          Founded in 2011, Loopstudios has been producing world-class virtual
+          reality projects for some of the best companies around the globe. Our
+          award-winning creations have transformed businesses through digital
+          experiences that bind to their brand.
+        </p>
       </div>
     </section>
     <section class="portfolio">
