--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         alt="peron with v r goggles"
       />
       <div class="description">
-        <h2>THE LEADER IN INTERACTIVE VR</h2>
+        <h2>
+          THE LEADER IN <br />
+          INTERACTIVE VR
+        </h2>
         <p>
           Founded in 2011, Loopstudios has been producing world-class virtual
           reality projects for some of the best companies around the globe. Our
