play with media queries

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     <section class="headline">
       <img
+        class="desc-image"
         src="./images/desktop/image-interactive.jpg"
         alt="peron with v r goggles"
       />
